force-app/main/default/objects/BSConfig__c/BSConfig__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>名刺Scan設定</label>
</CustomObject>