force-app/main/default/objects/BSConfig__c/fields/APIKey__c.field-meta.xml
<CustomField>
    <fullName>APIKey__c</fullName>
    <description>サービスAPIキー</description>
    <label>APIキー</label>
    <length>255</length>
    <type>Text</type>
</CustomField>