force-app/main/default/objects/BSConfig__c/fields/ServiceURL__c.field-meta.xml
<CustomField>
    <fullName>ServiceURL__c</fullName>
    <description>OCRサービスエンドポイント</description>
    <label>エンドポイント</label>
    <length>255</length>
    <type>Text</type>
</CustomField>