force-app/main/default/objects/BSConfig__c/fields/UseAzureAI__c.field-meta.xml
<CustomField>
    <fullName>UseAzureAI__c</fullName>
    <defaultValue>false</defaultValue>
    <description>AzureAI利用する場合、このオプションをチェックしてください。</description>
    <label>AzureAI利用する</label>
    <type>Checkbox</type>
</CustomField>